--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
        </div>
     </section>
 
-    <section id="depoimento" class="container">
+   <!-- <section id="depoimento" class="container">
         <h2 class="title-depoimentos">Depoimento de clientes</h2>
 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+
             <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             </ol>
         
-            <!-- Wrapper for slides -->
+
             <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="IMG/depoimentos/depoimento1.png">
@@ -185,7 +185,7 @@
             </div>
             </div>
         
-            <!-- Controls -->
+
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -195,7 +195,7 @@
             <span class="sr-only">Next</span>
             </a>
         </div>
-    </section>
+    </section> -->
 
   <div class="container">
     <div class="row">
