Atualizacao de contato

--- a/index.html
+++ b/index.html
@@ -257,13 +257,12 @@
    <footer id="contato">
     <address>
         <strong>TopCasaFina Arquitetura</strong><br>
-        Rua Vergueiro, 3185, Vila Mariana<br>
-        São Paulo, SP<br>
-        Tel.: (11) 5571-2751 ou 5083-3884    
+        Itapevi, SP<br>
+        Tel.: (11) 9 3765-2896   
        </address>
     
        <address>
-            Email: contato.topcasafina@alura.com.br
+            Email: vittor.prweb@outlook.com
        </address>
    </footer>
 
